--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,142 @@
-.App {
-  text-align: center;
+:root {
+  --primary-color: rgb(167, 76, 76);
+  --primary-color-highlight: blue;
+  --bs-body-bg: rgb(199, 184, 184);
+  --bs-body-font-family: "Montserrat", sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html{scroll-behavior: smooth;}
+a {
+  color: var(--primary-color);
 }
+a:hover {
+  color: var(--primary-color);
+}
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+.container-custom {
+  width: 100%;
+  padding: 0 1rem;
+  margin: 0 auto;
+}
+/* Media Queries */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 1400px) {
+  .container-custom {
+    width: 1340px;
   }
 }
+@media (min-width: 1600px) {
+  .container-custom {
+    width: 1520px;
+  }
+}
+@media screen and (min-width: 576px) {
+  .container,
+  .container-sm {
+    max-width: 100vw;
+  }
+}
+@media screen and (min-width: 500px) {
+  .container-custom {
+    width: 60%;
+  }
+}
+/* Custom Container */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Main Header */
+.header {
+  z-index: 2;
+}
+
+/* Main Navbar */
+#navbar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(255, 247, 231);
+  z-index: 4;
+}
+.dropdown-nav__closeNavBtn {
+  position: absolute;
+  top: 20px;
+  right: 16px;
+  background-color: rgb(255, 255, 255, 0.6);
+}
+.dropdown-nav__container {
+  height: 100vh;
+  padding: 0 1rem;
+}
+
+/* Hero section */
+.hero {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.hero-img {
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;*/
+  object-fit: cover;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translateX(-50%) translateY(-50%);
+}
+.hero__overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(63, 23, 23);
+  opacity: 0.3;
+  z-index: 1;
+}
+.hero__content {
+  z-index: 1;
+}
+.hero__content-width {
+  max_width: 540px;
+}
+@media (min-width: 1200px) {
+  .hero__heading {
+    font-size: 3.2rem;
+  }
+}
+.hero__scroll-btn {
+  position: absolute;
+  left: 50%;
+  bottom: 30px;
+  transform: translateX(-50%);
+  z-index: 1;
+  color: var(--bs-light);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+.hero__scroll-btn  .bi{
+  transition-delay:0.8s;
+  animation:bounce 1s infinite alternate;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes bounce{
+  from{
+    transform: translateY(0px);
   }
-  to {
-    transform: rotate(360deg);
+  to{
+    transform: translateY(-8px);
   }
 }
