--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: rgb(167, 76, 76);
   --primary-color-highlight: blue;
-  --bs-body-bg: rgb(199, 184, 184);
+  --bs-body-bg: #e0d2c0;
   --bs-body-font-family: "Montserrat", sans-serif;
 }
 html{scroll-behavior: smooth;}
@@ -32,15 +32,30 @@ body {
     width: 1520px;
   }
 }
-@media screen and (min-width: 576px) {
+@media (max-width: 800px) {
+  .container-custom {
+    margin:2em auto;
+  }
+}
+@media screen and (min-width: 500px) {
   .container,
   .container-sm {
     max-width: 100vw;
   }
+  .container-custom{
+    width:60%;
+  }
 }
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 500px) {
   .container-custom {
-    width: 60%;
+    width: 95%;
+
+  }
+}
+@media screen and (max-width: 680px) {
+  .container-custom {
+    width: 90%;
+
   }
 }
 /* Custom Container */
@@ -139,4 +154,40 @@ body {
   to{
     transform: translateY(-8px);
   }
+}
+
+/* Explore */
+.explore{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.explore__section-thumbnail{
+  height: 240px;
+  width: 426px;
+  object-fit: cover;
+  margin: 0 auto;
+}
+.explore__content-width{
+  max-width: 550px;
+}
+.explore___background{
+  background-color: rgb(245, 245, 245);
+}
+@media (min-width: 544px){
+  .explore{
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .explore__section-thumbnail{
+    height: 546px;
+    width:453px;
+  
+  }
+}
+
+/* footer */
+.footer .border-highlight{
+border-top:1px solid white;
+
 }
