--- a/Reader/frontend/src/App.css
+++ b/Reader/frontend/src/App.css
@@ -4,17 +4,24 @@
   --bs-body-bg: #e0d2c0;
   --bs-body-font-family: "Montserrat", sans-serif;
 }
-html{scroll-behavior: smooth;}
+
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   color: var(--primary-color);
 }
+
 a:hover {
   color: var(--primary-color);
 }
+
 body {
   margin: 0 !important;
   padding: 0 !important;
 }
+
 .container-custom {
   width: 100%;
   padding: 0 1rem;
@@ -28,37 +35,45 @@ body {
     width: 1340px;
   }
 }
+
 @media (min-width: 1600px) {
   .container-custom {
     width: 1520px;
   }
 }
+
 @media (max-width: 800px) {
   .container-custom {
-    margin:2em auto;
+    margin: 2em auto;
   }
 }
+
 @media screen and (min-width: 500px) {
+
   .container,
   .container-sm {
     max-width: 100vw;
   }
-  .container-custom{
-    width:60%;
+
+  .container-custom {
+    width: 60%;
   }
 }
+
 @media screen and (max-width: 500px) {
   .container-custom {
     width: 95%;
 
   }
 }
+
 @media screen and (max-width: 680px) {
   .container-custom {
     width: 90%;
 
   }
 }
+
 /* Custom Container */
 
 /* Main Header */
@@ -76,12 +91,14 @@ body {
   background-color: rgb(255, 247, 231);
   z-index: 4;
 }
+
 .dropdown-nav__closeNavBtn {
   position: absolute;
   top: 20px;
   right: 16px;
   background-color: rgb(255, 255, 255, 0.6);
 }
+
 .dropdown-nav__container {
   height: 100vh;
   padding: 0 1rem;
@@ -110,6 +127,7 @@ body {
   height: auto;
   transform: translateX(-50%) translateY(-50%);
 }
+
 .hero__overlay {
   position: absolute;
   left: 0;
@@ -120,6 +138,7 @@ body {
   opacity: 0.3;
   z-index: 1;
 }
+
 .hero__content {
   z-index: 1;
 }
@@ -129,6 +148,7 @@ body {
     font-size: 3.2rem;
   }
 }
+
 .hero__scroll-btn {
   position: absolute;
   left: 50%;
@@ -142,53 +162,167 @@ body {
   text-decoration: none;
 }
 
-.hero__scroll-btn  .bi{
-  transition-delay:0.5s;
-  animation:bounce 1s infinite alternate;
+.hero__scroll-btn .bi {
+  transition-delay: 0.5s;
+  animation: bounce 1s infinite alternate;
 }
-@keyframes bounce{
-  from{
+
+@keyframes bounce {
+  from {
     transform: translateY(0px);
   }
-  to{
+
+  to {
     transform: translateY(-8px);
   }
 }
 
 /* Explore */
-.explore{
+.explore {
   padding-top: 40px;
   padding-bottom: 40px;
 }
 
-.explore__section-thumbnail{
+.explore__section-thumbnail {
   height: 240px;
   width: 426px;
   object-fit: cover;
   margin: 0 auto;
 }
-.explore__content-width{
+
+.explore__content-width {
   max-width: 550px;
 }
-.explore___background{
+
+.explore___background {
   background-color: rgb(245, 245, 245);
 }
-@media (min-width: 544px){
-  .explore{
+
+@media (min-width: 544px) {
+  .explore {
     padding-top: 80px;
     padding-bottom: 80px;
   }
-  .explore__section-thumbnail{
+
+  .explore__section-thumbnail {
     height: 546px;
-    width:453px;
-  
+    width: 453px;
+
   }
 }
 
 /* footer */
 .footer {
-bottom: 0;
-width: 100%;
+  bottom: 0;
+  width: 100%;
 
-} 
+}
 
+.displayBookContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.displayBookContent {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
+
+}
+.sidebars {
+  position: fixed;
+  top: 0;
+  left: -20px;
+  width: 250px;
+  height: 100%;
+  overflow-y: auto; 
+  background-color: #f8f8fa;
+  color: black;
+  transition: left 1s ease;
+  z-index: 2;
+  text-align: left;
+}
+
+.sidebars.open {
+  left: 0;
+  background-color: #f8f8fa;
+}
+
+.sidebar-btn {
+  border: none;
+  background: #f8f8fa;
+  padding-top: 40px;
+  padding-left: 2px;
+  font-weight: 700;
+  padding-top: -20px;
+  margin-left: 20px;
+  margin-bottom: 0;
+
+}
+
+.bookmark-dropdown {
+  position: absolute;
+  top: 42px;
+  right: 28%;
+  background-color: white;
+  border: 1px solid #ccc;
+  display: none;
+  width: 250px;
+  color: black;
+  height: 200px; 
+  overflow-y: auto; 
+  text-align: left;
+  z-index: 1000;
+  
+}
+
+.bookmark-content {
+  padding: 8px;
+  max-height: 100%; 
+}
+.btn-link:hover .bookmark-dropdown {
+  display: block;
+}
+.search-container {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  margin: 7px;
+  right: 5px;
+
+}
+
+.search-animation {
+  transition: transform 0.3s ease;
+}
+
+
+.search-container input {
+  flex: 1;
+  padding: 8px;
+  border-radius: 4px;
+  font-size: 16px;
+  width: 250px;
+  border: none;
+}
+
+.search-container button {
+  background-color: gray;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 12px;
+  margin-left: 10px;
+  font-size: 12px;
+  cursor: pointer;
+  border: none;
+}
+
+.search-container button.close {
+  background-color: #ccc;
+}
+
+.search-container button:hover {
+  background-color: #d3d3d3;
+  color: #7c7c7c;
+}
