Add deployment instructions

--- a/Dictionary/RootExtracterApp/src/main/resources/templates/welcome.html
+++ b/Dictionary/RootExtracterApp/src/main/resources/templates/welcome.html
@@ -1,4 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +13,7 @@
     <style>
         /* Define your custom styles here */
         body {
-            background-color: #f8f7f9;
+            background-color: #DCD9E3;
             color: #000000;
             margin: 0; /* Remove default margin */
             padding: 0; /* Remove default padding */
@@ -24,13 +23,12 @@ font-family: 'Prata', serif;
        
 
         .navbar {
-            background-color: #ced2dd;
+            background-color: #B9B4C7;
              color:#000000;
         }
         .join-btn{
         background-color: #352F44;
-        
-          border: 1px solid black;
+        border: none;
        
         }
         .btn-primary:hover{
@@ -43,7 +41,7 @@ font-family: 'Prata', serif;
             background-image: url('your-hero-image.jpg');
             background-size: cover;
             background-position: center;
-            background-color:#ced2dd;
+            background-color:#B9B4C7;
            
             padding: 100px 0;
             text-align: center;
@@ -100,9 +98,8 @@ font-family: 'Prata', serif;
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="#contact">Contact Us</a>
                     </li>
-
                 </ul>
-                <a href="/loginpage" class="btn btn-primary join-btn ">Admin Login</a>
+                <a href="#" class="btn btn-primary join-btn ">Join</a>
             </div>
         </div>
     </nav>
